k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whitenoise-caster
  namespace: whitenoise
  labels:
    app: whitenoise-caster
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: whitenoise-caster
